--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^3.5.9",
+    "@emotion/native": "^11.10.0",
+    "@emotion/react": "^11.10.4",
     "@expo/webpack-config": "^0.17.0",
     "aws-amplify": "^4.3.39",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.6.0",
     "react-native": "^0.70.3",
     "react-native-web": "^0.18.9"
   },
