--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/native": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "aws-amplify": "^4.3.39",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
